# sc1-main-io-mbed

./: .gitignore  .gitmodules  .mbed  .mbedignore  CMakeLists.txt  CONTRIBUTING.md  README.md  dev.sh  i2cWrapper.cpp  i2cWrapper.h  i2cutil.h  lsm6dsl.cpp  lsm6dsl.h  main.cpp  mbed_app.json  tca6416.cpp  tca6416.h
.github/workflows/: ci.yml
applications/: uartApp.cpp  uartApp.h
autocoding/: README.md  autocode.py  format.json  generators.py  struct.cpp
autocoding/templates/: uartApp.template.cpp  uartApp.template.h
drivers/include/: can.h
drivers/source/: can.cpp
embedded/devices/include/: bms.h  ina219.h  mcc.h  mppt.h  tca6416.h
embedded/devices/src/: bms.cpp  ina219.cpp  mcc.cpp  mppt.cpp  tca6416.cpp
embedded/drivers/include/: can.h  i2cdevice.h  uart.h
embedded/drivers/src/: can.cpp  i2cdevice.cpp  i2cutil.cpp  uart.cpp
include/: analog.h  candecoder.h  dataFormat.h  digital.h  sofi.h  telemetry.h
src/: analog.cpp  candecoder.cpp  dataFormat.cpp  digital.cpp  sofi.cpp
